[package]
name = "pldcraft-client"
version = "0.1.0"
authors = ["Andreas Lokko", "Andrey Penechko", "aolko", "Connor Scialdone", "James Martin <james@jtmar.me>", "Krovius", "VermillionAzure"]
description = "A voxel-based sandbox game engine created by the programming language design community."
documentation = "https://github.com/pldcraft/pldcraft/wiki"
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[dependencies]
pldcraft = { version = "0.1.0", path = "../" }
vulkano = "0.11.1"
